Update Janex file format documentation with RootConfigGroup section and configuration structures